dnl Process this file with autoconf to produce a configure script.

dnl ## Initialize autoconf ##

AC_INIT(src/gwave.c)
AM_INIT_AUTOMAKE(gwave, 19990927)
AM_CONFIG_HEADER(config.h)

dnl Use ANSI mode
AM_PROG_CC_STDC

dnl ## Checks for programs ##
AC_PROG_RANLIB
AC_CHECK_PROG(GRAPH, graph, $ac_dir/$ac_word)
if test ! -z "$GRAPH"; then
	AC_DEFINE_UNQUOTED(PROG_GRAPH, "$GRAPH")
fi

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP

dnl check for posix regular expression routines
AC_CHECK_HEADER(regex.h, AC_CHECK_FUNC(regcomp, AC_DEFINE(HAVE_POSIX_REGEXP,1,defined if we have POSIX regular expression routines)))

dnl check for GTK+
AM_PATH_GTK(1.0.1, AC_DEFINE(HAVE_GTK,1,defined if we have GTK), AC_MSG_ERROR(Can not find GTK+ 1.0.1 or later on this system))

dnl various attempts at figuring out which gtk DnD API to use.
dnl AC_DEFINE_UNQUOTED(GTK_VERSION,"${gtk_config_major_version}.${gtk_config_minor_version}", Gtk major/minor version number)

case $gtk_config_major_version.$gtk_config_minor_version in
	1.0)
		;;
	1.1|1.2|1.3)
		AC_DEFINE(GTK_V12)
		;;
esac

AC_OUTPUT(Makefile src/Makefile spicefile/Makefile)

