## $Id: Makefile.am,v 1.5 2003-12-04 04:54:58 sgt Exp $
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)

EXTRA_DIST = ChangeLog guile-doc-snarf.in guile-func-name-check.in guile-snarf.awk.in

noinst_SCRIPTS = gwave-doc-snarf guile-func-name-check guile-snarf.awk doc-split

all:
	chmod +x $(noinst_SCRIPTS)
