## $Id: Makefile.am,v 1.3 2000-08-08 07:11:52 sgt Exp $
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)

EXTRA_DIST = ChangeLog guile-doc-snarf.in guile-func-name-check.in guile-snarf.awk.in

noinst_SCRIPTS = guile-doc-snarf guile-func-name-check guile-snarf.awk

